--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -108,7 +108,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 - **Chapter, Rookie, and Chapter Leader Awards** will receive 4 free student
   registrations and reimbursement of 3 room nights at the conference hotel if
   booked under oSTEM block by Monday, October 16, 2023. ($1,500 value)
-- **Advisor Award** receives 1 free professional registration + 3 free student
+- **Advisor Award** receives 1 free advsior registration + 3 free student
   registrations. ($775 value)
 
 <div>
