--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -36,14 +36,14 @@ There are 4 attendee ticket types:
 <br />
 Registration Milestones:
 
-- **Early Bird Ends**: Sunday, August 6
-- **Regular Pricing**: Monday, August 7 - Sunday, October 8
+- **Early Bird Ends**: Monday, August 14
+- **Regular Pricing**: Tuesday, August 15 - Sunday, October 8
 - **Late Price Effective**: Monday, October 9
 - **Cut-off date**: Friday, October 27
 
 <br />
 Ticket prices are subject to taxes and additional fees imposed by the registration
-platform and government authorities. Registration deadline is October 15, 2023.
+platform and government authorities.
 
 **Want an oSTEM Member Discount?** Become one today to receive an additional
 membership discount, register on our
