--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -36,9 +36,9 @@ There are 4 attendee ticket types:
 <br />
 Registration Milestones:
 
-- **Early Bird Ends**: Monday, August 14
+- **Early Bird Pricing Ends**: Monday, August 14
 - **Regular Pricing**: Tuesday, August 15 - Sunday, October 8
-- **Late Price Effective**: Monday, October 9
+- **Late Pricing**: Monday, October 9 - Friday, October 27
 - **Cut-off date**: Friday, October 27
 
 <br />
