--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -30,7 +30,7 @@ There are 4 attendee ticket types:
 
 - Student
 - Professional
-- Advisor
+- Faculty & Staff Advisors (Must be registered in MemberNova as a Student Chapter Advisor)
 - Expo-Only
 
 <br />
@@ -77,7 +77,7 @@ membership discount, register on our
     </tr>
 </table>
 
-_The Student, Advisor, and Professional tickets are all-access passes to
+_The Student, Faculty & Staff Advisor, and Professional tickets are all-access passes to
 conference programming, events, and meals. oSTEM will provide Friday lunch and
 Saturday breakfast and a lunch voucher for Saturday._
 
