Update registration page

--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -20,7 +20,14 @@ us in a celebration of diversity across all fields.
 
 <div className="text-bright-peach font-bold">
 
-## Conference and Expo Registration opening soon!
+## Conference and Expo Registration is OPENING!
+
+<div className="my-2 text-center">
+  <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
+    Register today!
+  </CTAButton>
+</div>
+<br />
 
 </div>
 
