--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -37,7 +37,7 @@ There are 4 attendee ticket types:
 
 - Student
 - Professional
-- Faculty/Staff Advisor (Must be registered in MemberNova as a Student Chapter Advisor)
+- Student Chapter Advisor (Must be registered in MemberNova as a Student Chapter Advisor)
 - Expo-Only
 
 <br />
@@ -77,14 +77,14 @@ membership discount, register on our
         <td>$500 / $600</td>
     </tr>
     <tr>
-        <td>Faculty/Staff Advisor</td>
+        <td>Chapter Advisor</td>
         <td>$225</td>
         <td>$250</td>
         <td>$300</td>
     </tr>
 </table>
 
-_The Student, Faculty/Staff Advisor, and Professional tickets are all-access passes to
+_The Student, Student Chapter Advisor, and Professional tickets are all-access passes to
 conference programming, events, and meals. oSTEM will provide Friday lunch and
 Saturday breakfast and a lunch voucher for Saturday._
 
