--- a/src/pages/2023/awards-volunteer.mdx
+++ b/src/pages/2023/awards-volunteer.mdx
@@ -15,7 +15,7 @@ import { AwardeeCard } from "../../components/awards/AwardeeCard";
 
 ### Award Description
 
-Description Coming Soon
+This award recognizes volunteers who have gone above and beyond to bring oSTEM to new heights in the last year. The Executive Board recognizes volunteers who have demonstrated their drive to achieve great things and push our organization to grow. In the past, awardees have been recognized for creating our scholarship program, spearheading the pivot to an online format for our cornerstone event during COVID, cultivating and expanding institutional support for professional members and collegiate members, and stepping into leadership roles with grace and professionalism. oSTEM is powered by the hard work and commitment of our volunteers. It is only with volunteers like this that oSTEM is able to continue our work of empowering LGBTQ+ people in STEM and setting them up for success in the personal, academic, and professional realms. If the work of these volunteers inspires you, consider volunteering your time, talent, and effort.
 
 ### Eligibility
 
