--- a/src/pages/2023/awards-volunteer.mdx
+++ b/src/pages/2023/awards-volunteer.mdx
@@ -47,7 +47,7 @@ regarding this application, please contact us at membership@ostem.org.
 <div className="grid gap-8 md:grid-cols-2 my-2">
   <AwardeeCard
     awardeeName="Infrastructure Builder - Ian Hall"
-    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    profileImg="/images/2023/2022Infrastructure_IanHall.jpg"
     altDesc="profile photo of Ian Hall"
     width={150}
     height={225}
