--- a/src/pages/2023/awards-volunteer.mdx
+++ b/src/pages/2023/awards-volunteer.mdx
@@ -24,8 +24,7 @@ This award recognizes volunteers who have gone above and beyond to bring oSTEM t
 
 <br />
 
-Self-nominations are accepted and encouraged. If you have any questions
-regarding this application, please contact us at membership@ostem.org.
+Award recipients are nominated and selected by the oSTEM Board of Directors.
 
 <br />
 <div align="center">
