--- a/src/pages/2023/awards-volunteer.mdx
+++ b/src/pages/2023/awards-volunteer.mdx
@@ -151,14 +151,14 @@ Award recipients are nominated and selected by the oSTEM Board of Directors.
 <div className="grid gap-8 md:grid-cols-2 my-2">
   <AwardeeCard
     awardeeName="Conference MVP - Jared Canright"
-    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    profileImg="/images/awards/2019ConfMVP_JaredC.png"
     altDesc="profile photo of Jared Canright"
     width={150}
     height={225}
   />
   <AwardeeCard
     awardeeName="Volunteer of the Year - Christian Alonso"
-    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    profileImg="/images/awards/2019VOY_ChristianA.jpg"
     altDesc="profile photo of Christian Alonso"
     width={150}
     height={225}
