--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,8 +8,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <div className="border-b-4 border-chill-green border-solid pb-4 text-center">
   <img
-    alt="Anaheim 2023 Banner"
-    src="/images/2023/2023_official_logo_1.png"
+    alt="13th Annual oSTEM Conference 2023 from November 9 – 12, 2023 in Anaheim, CA. website www.conference.ostem.org"
+    src="/images/2023/2023conference_header.png"
     className="flex w-96 mx-auto"
   />
   <p className="text-5xl font-display font-black text-navy">
