--- a/src/pages/2023/awards-volunteer.mdx
+++ b/src/pages/2023/awards-volunteer.mdx
@@ -60,7 +60,7 @@ Award recipients are nominated and selected by the oSTEM Board of Directors.
   />
   <AwardeeCard
     awardeeName="Volunteer of the Year - M Wittkop"
-    profileImg="/images/pattern/rainbox-box-pattern-desaturated.png"
+    profileImg="/images/awards/2022Volunteer_MWittkop.jpg"
     altDesc="profile photo of M Wittkop"
     width={150}
     height={225}
