--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -21,6 +21,7 @@ us in a celebration of diversity across all fields.
 <div className="text-bright-peach font-bold">
 ## Conference and Expo Registration is OPEN!
  
+</div>
 
 <div className="my-2 text-center">
   <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
