--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -8,6 +8,17 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
   <p className="text-5xl font-display font-black">Registration</p>
 </div>
 
+<Image
+  src="/images/2023 registration.png.jpg"
+  alt=""
+  layout="responsive"
+  width="400"
+  height="180"
+  priority="true"
+/>
+
+<br />
+
 We are pleased to invite you to the 13th Annual Conference in Anaheim,
 California! We look forward to over 1,000 attendees across the world coming
 together for this four-day conference experience, taking place **November 9 -
