--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -9,7 +9,7 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 </div>
 
 <Image
-  src="/images/2023 registration.png.jpg"
+  src="/images/2023registration.png.jpg"
   alt=""
   layout="responsive"
   width="400"
