--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -175,8 +175,9 @@ sponsorship@ostem.org.
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
-**All programming will happen in the Anaheim Marriott. For the best and most
-convenient conference experience, we recommend lodging at the host hotel.**
+**To ensure you have the best conference experience possible, we highly recommend staying at the Anaheim Marriott Hotel. The conference will be located conveniently inside the hotel which means you won’t have to worry about the logistics of commuting to and parking at the venue. You’ll also be able to take breaks in your room between sessions (think: power naps, changing your shoes, grabbing a phone charger, access to fridge, etc) and easily connect with other attendees and partners. The hotel employees will prepped by the oSTEM team to prepare for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.
+
+If you have not secured your reservations at the Anaheim Marriott, please do so by October 15th or before the oSTEM room block is full, as space is limited.**
 
 700 W Convention Way. <br /> Anaheim, CA 92802
 
