--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -148,7 +148,7 @@ operations first-hand.
 \* This ticket guarantees your spot on the tour including round-trip
 transportation, hand-held breakfast, and lunch.
 
-Some tours may only be open to U.S citizens and a government issued photo ID may
+Some tours may only be open to U.S citizens and a government-issued photo ID may
 be required. Site tour tickets will be available starting **September 4th** and
 can be added to your registration retroactively. Please check back as other tour
 options will be added.
@@ -175,9 +175,9 @@ sponsorship@ostem.org.
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
-**To ensure you have the best conference experience possible, we highly recommend staying at the Anaheim Marriott Hotel. The conference will be located conveniently inside the hotel which means you won’t have to worry about the logistics of commuting to and parking at the venue. You’ll also be able to take breaks in your room between sessions (think: power naps, changing your shoes, grabbing a phone charger, access to fridge, etc) and easily connect with other attendees and partners. The hotel employees will prepped by the oSTEM team to prepare for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.
+**To ensure you have the best conference experience possible, we highly recommend staying at the Anaheim Marriott Hotel. The conference will be located conveniently inside the hotel which means you won’t have to worry about the logistics of commuting to and parking at the venue. You’ll also be able to take breaks in your room between sessions (think: power naps, changing your shoes, grabbing a phone charger, access to fridge, etc) and easily connect with other attendees and partners. The hotel employees will prepped by the oSTEM team to prepare for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.**
 
-If you have not secured your reservations at the Anaheim Marriott, please do so by October 15th or before the oSTEM room block is full, as space is limited.**
+If you have not secured your reservations at the Anaheim Marriott, please do so by October 15th or before the oSTEM room block is full, as space is limited.
 
 700 W Convention Way. <br /> Anaheim, CA 92802
 
