--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -93,12 +93,11 @@ postdoc posters!
 - **I submitted my poster but never received a confirmation email. Did you
   receive my poster submission?**
 
-  The Jotform is currently set up to send confirmation emails. In the case that
-  you do not receive one, please reach out to conference-programming@ostem.org.
+  The Jotform is currently set up to send confirmation emails. If you do not receive one, please reach out to conference-programming@ostem.org.
 
 - **How will the posters be displayed?**
 
-  We display the posters on an 8' x 4' free-standing cork board with push pins.
+  We display the posters on an 8' x 4' free-standing corkboard with push pins.
 
 - **I noticed the poster session is during the Career Fair and Graduate School
   Expo. Can I still attend the expo and present a poster?**
@@ -116,13 +115,17 @@ postdoc posters!
 - **How will I know if my poster was accepted for the poster session?**
 
   Posters will be accepted on a rolling basis and you will receive an email
-  prior to October to tell you the outcome of your poster submission.
+  before October to tell you the outcome of your poster submission.
 
 - **When can I set my poster up?**
 
   Poster setup will be on Saturday morning and be available throughout the day
   on Saturday. Feel free to take a free moment to wander through the posters
   during the day.
+
+- **Do students participating in the poster session receive a conference registration discount?**
+
+  Yes, students chosen to present their research during the poster sessions will receive a 20% discount code in their confirmation email. Our team of reviewers are volunteers and may need up to 14 business days to review submissions and confirm.
 
 <div className="text-bright-peach font-bold">
 
@@ -138,7 +141,7 @@ Please email our Conference Programming Committee at
 conference-programming@ostem.org with any questions.
 
 For inquiries regarding available conference accommodations or to request this
-document in an accessible format, please contact the Conference Accessiblity
+document in an accessible format, please contact the Conference Accessibility
 Team at access@ostem.org.
 
 </SiteLayout>
