--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -176,8 +176,8 @@ sponsorship@ostem.org.
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
 **We highly recommend staying at the Anaheim Marriott Hotel to ensure you have the best conference experience possible. Benefits of staying at the conference hotel include:**
-- Reduce logistics and costs related to commuting to and parking at the venue
-- Ability to take breaks in your room between sessions (think: power naps, changing your shoes, grabbing a phone charger, access to fridge, etc)
+- Minimize logistics and costs related to commuting to the venue
+- Quick access to your room between sessions (power naps, changing shoes, grabbing a phone charger, access to a fridge, etc.)
 - Easily connect with other attendees and partners before, between, and after sessions
 - Hotel employees will prepped by the oSTEM team for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.
 
