--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -181,7 +181,7 @@ sponsorship@ostem.org.
 - Easily connect with other attendees and partners before, between, and after sessions
 - Hotel employees will prepped by the oSTEM team for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.
 
-If you have not secured your reservations at the Anaheim Marriott, please do so by October 15th or before the oSTEM room block is full, as space is limited.
+**Room availability is limited and reservations must be made before October 15th. To ensure availability, reserve your room today.**
 
 700 W Convention Way. <br /> Anaheim, CA 92802
 
