--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -177,7 +177,7 @@ sponsorship@ostem.org.
 
 **We highly recommend staying at the Anaheim Marriott Hotel to ensure you have the best conference experience possible. Benefits of staying at the conference hotel include:**
 - Minimize logistics and costs related to commuting to the venue
-- Quick access to your room between sessions (power naps, changing shoes, grabbing a phone charger, access to a fridge, etc.)
+- Quick and convenient access to your room between sessions (power naps, changing shoes, grabbing a phone charger, access to a fridge, etc.)
 - Easily connect with other attendees and partners before, between, and after sessions
 - Hotel employees will prepped by the oSTEM team for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.
 
