--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -32,7 +32,7 @@ us in a celebration of diversity across all fields.
 <div className="text-bright-peach font-bold">
 
 ## Conference and Expo Registration is OPEN!
- 
+
 </div>
 
 <div className="my-2 text-center">
@@ -48,7 +48,8 @@ There are 4 attendee ticket types:
 
 - Student
 - Professional
-- Student Chapter Advisor (Must be registered in MemberNova as a Student Chapter Advisor)
+- Student Chapter Advisor (Must be registered in MemberNova as a Student Chapter
+  Advisor)
 - Expo-Only
 
 <br />
@@ -68,6 +69,7 @@ membership discount, register on our
 [Join oSTEM](https://ostem.org/page/how-to-join-ostem) page.
 
 <TopicSquare title="Full Conference Tickets" borderColor="border-green-500">
+<div className="overflow-x-auto">
 <table className="table-fixed text-center">
     <tr>
         <th>Ticket Type</th>
@@ -94,10 +96,11 @@ membership discount, register on our
         <td>$300</td>
     </tr>
 </table>
+</div>
 
-_The Student, Student Chapter Advisor, and Professional tickets are all-access passes to
-conference programming, events, and meals. oSTEM will provide Friday lunch and
-Saturday breakfast and a lunch voucher for Saturday._
+_The Student, Student Chapter Advisor, and Professional tickets are all-access
+passes to conference programming, events, and meals. oSTEM will provide Friday
+lunch and Saturday breakfast and a lunch voucher for Saturday._
 
 </TopicSquare>
 
@@ -175,13 +178,20 @@ sponsorship@ostem.org.
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
-**We highly recommend staying at the Anaheim Marriott Hotel to ensure you have the best conference experience possible. Benefits of staying at the conference hotel include:**
-- Minimize logistics and costs related to commuting to the venue
-- Quick and convenient access to your room between sessions (power naps, changing shoes, grabbing a phone charger, access to a fridge, etc.)
-- Easily connect with other attendees and partners before and after sessions
-- Hotel employees will prepped by the oSTEM team for our event, address the specific needs of our LGBTQ+ community, and will be on hand to help with any concerns that arise related to lodging.
+**We highly recommend staying at the Anaheim Marriott Hotel to ensure you have
+the best conference experience possible. Benefits of staying at the conference
+hotel include:**
 
-**Room availability is limited and reservations must be made before October 15th. To ensure availability, reserve your room today.**
+- Minimize logistics and costs related to commuting to the venue
+- Quick and convenient access to your room between sessions (power naps,
+  changing shoes, grabbing a phone charger, access to a fridge, etc.)
+- Easily connect with other attendees and partners before and after sessions
+- Hotel employees will prepped by the oSTEM team for our event, address the
+  specific needs of our LGBTQ+ community, and will be on hand to help with any
+  concerns that arise related to lodging.
+
+**Room availability is limited and reservations must be made before October
+15th. To ensure availability, reserve your room today.**
 
 700 W Convention Way. <br /> Anaheim, CA 92802
 
