Add book-room button

--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -29,16 +29,23 @@ us in a celebration of diversity across all fields.
 
 ---
 
-<div className="text-bright-peach font-bold">
+<div className="text-bright-peach font-bold text-center">
 
 ## Conference and Expo Registration is OPEN!
 
 </div>
 
-<div className="my-2 text-center">
-  <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
-    Register today!
-  </CTAButton>
+<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
+  <div className="my-1 sm:mx-2">
+    <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/">
+      Register Today!
+    </CTAButton>
+  </div>
+  <div className="my-1 sm:mx-2 mb-0.5">
+    <CTAButton onClick="https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611">
+      Book Your Room!
+    </CTAButton>
+  </div>
 </div>
 <br />
 
