--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -3,10 +3,10 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Attendee Guide">
+<SiteLayout title="Attendee Resources">
 
 <div className="border-b-4 border-purple border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Attendee Guide</p>
+  <p className="text-5xl font-display font-black">Attendee Resources</p>
 </div>
 
 <br />
