--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -18,14 +18,7 @@ import Image from "next/image";
 
 Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. This deadline to complete this form is Tuesday, September 26, 2023.
 
-<br />
-
-<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
-  <div className="my-1 sm:mx-2">
-    <CTAButton onClick="https://form.jotform.com/232484330296154">
-      Available Awards
-    </CTAButton>
-  </div>
+[Available Awards](https://form.jotform.com/232484330296154/)
 
 **Emerson Charitable Trust: Student Conference Registrations**
 
