--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -16,16 +16,17 @@ import Image from "next/image";
 
 </div>
 
-Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. This deadline to complete this form is Tuesday, September 26, 2023.
+Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline to complete this form is Tuesday, September 26, 2023.
 
 **[Click here for available awards](https://form.jotform.com/232484330296154/)**
 
 **Emerson Charitable Trust: Student Conference Registrations**
 
- -Eligibility: Open to all LGBTQ+ students. Priority will be given to students travelling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, MO.
+ *Eligibility: Open to all LGBTQ+ students. Priority will be given to students traveling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, MO.
 
 **Booz Allen Foundation: Travel Support** (student conference registrations or hotel bookings) 
- -Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
+ 
+ *Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
 
 <br />
 
