--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -22,11 +22,12 @@ Through the generous donations of corporate and individual donors, we are accept
 
 **Emerson Charitable Trust: Student Conference Registrations**
 
- *Eligibility: Open to all LGBTQ+ students. Priority will be given to students traveling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, MO.
+  * Eligibility: Open to all LGBTQ+ students.
+  * Priority will be given to students traveling from the following states: FL, TX, TN, GA, AZ, OH, LA, SC, MT, NE, and MO.
 
 **Booz Allen Foundation: Travel Support** (student conference registrations or hotel bookings) 
  
- *Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
+ * Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
 
 <br />
 
