Change to link to button and sidebar page name
Attendee Guide --> Attendee Resources

--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -18,7 +18,13 @@ import Image from "next/image";
 
 Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline to complete this form is Tuesday, September 26, 2023.
 
-**[Click here for available awards](https://form.jotform.com/232484330296154/)**
+<br/>
+<div className="text-l flex justify-center p-2">
+    <CTAButton onClick="https://form.jotform.com/232484330296154/" backgroundColor="bright-peach">
+      View available awards
+    </CTAButton>
+</div>
+<br/>
 
 **Emerson Charitable Trust: Student Conference Registrations**
 
@@ -37,7 +43,7 @@ Through the generous donations of corporate and individual donors, we are accept
 
 </div>
 
-Not sure what to do when you arrive? Here’s some tips on how to plan your trip:
+Not sure what to do when you arrive? Here's some tips on how to plan your trip:
 <br />
 
 <TopicSquare title="AIRPORTS" borderColor="border-green-500">
