--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -3,7 +3,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Attendee Resources">
+<SiteLayout title="Schedule">
 
 <div className="border-b-4 border-amber border-solid pb-4 mb-4 text-center">
   <p className="text-5xl font-display font-black">Schedule</p>
