--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -169,31 +169,19 @@ progress.
 
 <div>
   <div title="Whova event and conference app" id="whova-exhibitorwidget">
-    <p id="whova-loading">
-      Loading...(If the widget doesn't show up automatically, please refresh the
-      page.)
-    </p>
-    <br />
+    <p id="whova-loading">Loading...</p>
   </div>
   <script
-    src="https://whova.com/static/frontend/xems/js/whova-exhibitor-widget.js?eid=VkbdCZs0bUTD7CBXoTo3pVELzjHXdOek0MkKW2pd9qM%3D&host=https://whova.com"
+    src="https://whova.com/static/frontend/xems/js/whova-exhibitor-widget.js?eid=w3nm9trIKDqa2Z4vqZBaEdUpVsJ8Xtqb1C7tvh3-BT0%3D&host=https://whova.com"
     type="text/javascript"
     id="embeded-exhibitor-script"
   ></script>
   <div id="whova-wrap" class="whova-wrap-class">
     Powered By
     <a class="brandlink" target="_blank" href="https://whova.com">
-      {" "}
       <b>Whova</b>
     </a>
     <br />
-    <a
-      class="whova-emslink brandanchorlink"
-      target="_blank"
-      href="https://whova.com/trade-show-app-lead-retrieval/"
-    >
-      Virtual trade show platform
-    </a>
   </div>
 </div>
 
