--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -48,7 +48,7 @@ times are Pacific Time and are subject to change.
 - **12:30 PM - 1:30 PM:** Workshop Block 3 (Lunch provided)
 - **1:30 PM - 5:30 PM:** Career and Graduate School Expo
 - **4:30 PM - 5:30 PM:** Workshop Block 4
-- **5:30 PM - 7:00 PM:** Chapter & Volunteer \*\*\*\*Award Ceremony
+- **5:30 PM - 7:00 PM:** Chapter & Volunteer Award Ceremony
 - **7:00 PM - 9:00 PM:** Evening Networking Receptions (Sponsored)
 
 <br />
@@ -63,7 +63,7 @@ times are Pacific Time and are subject to change.
 - **8:00 AM - 9:30 AM:** Breakfast + Keynote+ Partner Award Ceremony
 - **9:45 AM - 10:45 AM:** Workshop Block 5
 - **11:00 AM - 4:00 PM:** Career and Graduate School Expo
-- **1:00 PM - 3:00 PM:** Poster Session (Duration to be confirmed.)
+- **2:00 PM - 3:00 PM:** Poster Session 
 - **3:00 PM - 4:00 PM:** Mixers
 - **4:00 PM - 5:30 PM:** Plenary Keynote
 - **5:45 PM - 6:45 PM:** Workshop Block 6
