--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -282,4 +282,22 @@ Not sure what to do when you arrive? Here's some tips on how to plan your trip:
     Convention Way (05 Grand Plaza Line)
     - One-way fare is $15 pp | Round-trip is $30 pp
 
+<br />
+
+<div className="text-bright-peach font-bold">
+
+## Building a Travel Request Proposal
+
+</div>
+
+Asking for support from your supervisor or academic department can feel daunting. Here are some resources and templates to help you feel prepared and confident!
+
+<br/>
+<div className="text-l flex justify-center p-2">
+    <CTAButton onClick="https://www.notion.so/ostem/Conference-Attendee-Resources-679ca7be44f34c4ca6dace34ea5f8eca/" backgroundColor="bright-peach">
+      Conference Attendee Resources
+    </CTAButton>
+
+</div>
+
 </SiteLayout>
