--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -44,11 +44,8 @@ poster please do so at the button below.
         d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
       />
     </svg>
-    Our Call for Posters is open! Submit your poster today!
+    We are no longer accepting posters. Thank you to everyone who has submitted!
   </p>
-  <CTAButton onClick={"https://form.jotform.com/231806601803146"}>
-    Submit a Poster
-  </CTAButton>
 </div>{" "}
 
 <div className="text-bright-peach font-bold">
