--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -3,7 +3,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Call for Posters">
+<SiteLayout title="Poster Presenter Information">
 
 <div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
   <p className="text-5xl font-display font-black">Call for Posters</p>
@@ -19,14 +19,13 @@ import Image from "next/image";
 />
 <br />
 
-Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now
+Out in Science, Technology, Engineering, and Mathematics (oSTEM) is no longer
 accepting poster proposals for the in-person 13th Annual oSTEM Conference 2023.
 
 The oSTEM Annual Conference Poster Session is intended for undergraduate
 students, graduate students, and postdocs to showcase their research to other
 conference attendees. Anyone performing academic or industry research is invited
-to submit a poster for consideration. If you are interested in submitting a
-poster please do so at the button below.
+to submit a poster for consideration.
 
 <div className="bg-tint-spruce-light text-2xl mt-4 p-8 rounded">
   <p className="flex items-center">
