--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,39 +19,30 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Upcoming Dates</h3>
     </div>
     <p className="p-4">
-      <b>Call for Posters:</b> Open June until September 30, 2023 <br />
-      <b>Early Bird Registration:</b> Open until August 14, 2023 <br />
       <b>Full-Priced Registration:</b> August 15, 2023 - October 8, 2023 <br />
       <b>Late Registration:</b> October 9 - October 27, 2023 <br />
       <b>Registration Cut-Off Date:</b> October 27, 2023 <br />
       <b>Chapter Award Nominations:</b> Closed September 8, 2023 <br />
+      <b>Call for Posters:</b> Closed September 30, 2023 <br />
+      <b>Early Bird Registration:</b> Closed August 14, 2023 <br />
     </p>
   </div>
   <div className="rounded md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
     <div className="bg-light-peach">
-      <h3 className="p-4">Call for Posters</h3>
+      <h3 className="p-4">Conference Registration</h3>
     </div>
     <p className="p-4">
-      The oSTEM Annual Conference Poster Session is intended for undergraduate
-      students, graduate students, and postdocs to showcase their research to
-      other conference attendees. Anyone performing academic or industry
-      research is invited to submit a poster for consideration. If you are
-      interested in submitting a poster please do so at the button below.
-      Posters will be on display for all conference attendees during the day on
-      Saturday. Poster submitters will be asked to remain with their poster and
-      explain their research to interested attendees and judges during the
-      Career and Graduate Fair Expo. Awards will be given out to the
-      highest-scoring undergraduate, graduate, and postdoc posters!
+      We are pleased to invite you to the 13th Annual Conference in Anaheim, California! We look forward to over 1,200 attendees across the world coming together for this four-day conference experience, taking place November 9 - 12, 2023 at the Anaheim Marriott. Check-in starts Thursday, November 9. Join us in a celebration of diversity across all fields.      
       <br />
       <br />
       <b>
         {" "}
-        Deadline is September 30, 2023 and will be accepted on a rolling basis.{" "}
+        Regular conference registration pricing is available until Sunday, October 8, 2023. Late pricing is available October 9-27, 2023.{" "}
       </b>
     </p>
     <div className="text-xl flex justify-center p-2">
-      <CTAButton onClick="/2023/cfp" backgroundColor="bright-peach">
-        Submit a Poster
+      <CTAButton onClick="/2023/registration" backgroundColor="bright-peach">
+        Register
       </CTAButton>
     </div>
   </div>
