--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -19,6 +19,8 @@ import Image from "next/image";
 This schedule will be updated with further information as it is available. All
 times are Pacific Time and are subject to change.
 
+[Click here for a view of the full agenda](https://whova.com/embedded/event/mlu1VMibLp9tSlC8A0HBJkwCbBFaxwJ5ZxWK-tiWvUc%3D/?utc_source=ems).
+
 <br />
 
 <div className="text-raspberry">
