--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -19,7 +19,17 @@ import Image from "next/image";
 This schedule will be updated with further information as it is available. All
 times are Pacific Time and are subject to change.
 
-[Click here for a view of the full agenda](https://whova.com/embedded/event/mlu1VMibLp9tSlC8A0HBJkwCbBFaxwJ5ZxWK-tiWvUc%3D/?utc_source=ems).
+<br />
+
+<div className="my-2 flex flex-col items-center">
+  <div className="text-purple text-2xl mb-2">
+    Full conference agenda on Whova!
+  </div>
+  <div className="my-1 sm:mx-2">
+    <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/585e1mby">
+      Conference Schedule
+    </CTAButton>
+  </div>
 
 <br />
 
