--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -29,8 +29,8 @@ times are Pacific Time and are subject to change.
     <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/585e1mby">
       Conference Schedule
     </CTAButton>
-
   </div>
+</div>
 
 <br />
 
@@ -76,7 +76,7 @@ times are Pacific Time and are subject to change.
 - **8:00 AM - 9:30 AM:** Breakfast + Keynote+ Partner Award Ceremony
 - **9:45 AM - 10:45 AM:** Workshop Block 5
 - **11:00 AM - 4:00 PM:** Career and Graduate School Expo
-- **2:00 PM - 3:00 PM:** Poster Session 
+- **2:00 PM - 3:00 PM:** Poster Session
 - **3:00 PM - 4:00 PM:** Mixers
 - **4:00 PM - 5:30 PM:** Plenary Keynote
 - **5:45 PM - 6:45 PM:** Workshop Block 6
