--- a/src/pages/2023/schedule.mdx
+++ b/src/pages/2023/schedule.mdx
@@ -26,7 +26,7 @@ times are Pacific Time and are subject to change.
     Full conference agenda on Whova!
   </div>
   <div className="my-1 sm:mx-2">
-    <CTAButton onClick="https://whova.com/portal/registration/ostem_202311/585e1mby">
+    <CTAButton onClick="https://whova.com/embedded/event/L%405xvNZj3VCqbHkXnFyGfl7Qu4s9zEVlkvswFNXHOTA%3D/?utc_source=ems">
       Conference Schedule
     </CTAButton>
   </div>
