--- a/src/pages/2023/attendee-guide.mdx
+++ b/src/pages/2023/attendee-guide.mdx
@@ -16,7 +16,7 @@ import Image from "next/image";
 
 </div>
 
-Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline for Booz Allen Foundation funding has been extended..
+Through the generous donations of corporate and individual donors, we are accepting requests for travel and registration support to help students offset the cost of their trip to the Annual Conference in Anaheim, CA. The funds can be used to purchase registrations or book hotel nights at the host hotel under the block rate, and will be disbursed by means of Conference Registration Codes and/or Hotel Night Bookings. The deadline for Booz Allen Foundation funding has been extended to Monday, October 9, 2023.
 
 <br/>
 <div className="text-l flex justify-center p-2">
@@ -26,7 +26,7 @@ Through the generous donations of corporate and individual donors, we are accept
 </div>
 <br/>
 
-**Booz Allen Foundation: Travel Support - Extended** (student conference registrations or hotel bookings) 
+**Booz Allen Foundation: Travel Support - Extended to 10/6/2023** (student conference registrations or hotel bookings) 
  
  * Eligibility: Open to students attending Minority Serving Institutes (MSIs) such as HBCUs, HSIs, TCUs, etc.
 
