registration.mdx - add free Cali resident ticket info

--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -125,7 +125,7 @@ lunch and Saturday breakfast and a lunch voucher for Saturday._
     </tr>
 </table>
 
-\*Residents and students in California can attend for free. Details coming soon!
+\* Residents and students in California are eligible for a complimentary Two-Day Expo Only Registration to attend the **Career Fair & Grad School Expo.** Please complete [this form](https://form.jotform.com/232814643539158) to sign up for a free ticket. *Exhibitors are not eligible.*
 
 The Expo-only pass grants access only to the Graduate School and Career Fair
 Expo on Friday, November 10 and Saturday, November 11. With over 100 sponsors
